<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount USB storage</string>
    <string name="sdcard_format">Erase USB storage</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="wifi_settings_category">WLAN settings</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="sound_settings">Sound</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="musicfx_title">Music effects</string>
    <string name="vibrate_in_silent_title">Vibrate in silent mode</string>
    <string name="notification_sound_title">Default notification</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_sound_dialog_title">Choose notification ringtone</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="title_font_size">Font size</string>
    <string name="firmware_version">Android Version:</string>
    <string name="model_number">Model Number:</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="lockpattern_settings_enable_visible_pattern_title">Make pattern visible</string>
    <string name="lockpattern_settings_enable_tactile_feedback_title">Vibrate on touch</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="accessibility_settings_title">Accessibility settings</string>
    <string name="accessibility_services_title">Services</string>
    <string name="accessibility_system_title">System</string>
    <string name="accessibility_power_button_ends_call_title">Power button ends call</string>
    <string name="accessibility_speak_password_title">Speak passwords</string>
    <string name="accessibility_touch_exploration_title">Explore by touch</string>
    <string name="accessibility_touch_exploration_summary">"When Explore by Touch is turned on, you can hear or see descriptions of what's under your finger.

 This feature is for low-vision users."</string>
    <string name="accessibility_long_press_timeout_title">Touch &amp; hold delay</string>
    <string name="accessibility_script_injection_title">Install web scripts</string>
    <string name="accessibility_menu_item_tutorial">Tutorial</string>
    <string name="accessibility_script_injection_button_allow">Allow</string>
    <string name="accessibility_script_injection_button_disallow">"Don't allow"</string>
    <string name="accessibility_script_injection_security_warning_title">Install web scripts?</string>
    <string name="accessibility_script_injection_security_warning_summary">Do you want apps to install scripts from Google that make their web content more accessible?</string>
    <string name="accessibility_touch_exploration_warning">This feature changes the way your device responds to touch. Turn on?</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="sound_category_calls_and_notification_title">Ringtone &amp; notifications</string>
    <string name="sound_category_feedback_title">System</string>
    <string name="device_miui_version">MIUI Version:</string>
    <string name="device_cpu">CPU:</string>
    <string name="device_memory">RAM:</string>
    <string name="device_internal_memory">Internal Memory:</string>
    <string name="device_sd_memory">SD Card:</string>
    <string name="sms_received_sound_title">SMS received sound</string>
    <string name="sms_delivered_sound_title">SMS delivered sound</string>
    <string name="sms_received_sound_dialog_title">Choose SMS received sound</string>
    <string name="sms_delivered_sound_dialog_title">Choose SMS delivered sound</string>
    <string name="haptic_feedback_level">Vibration level</string>
    <string name="privacy_protect_title">Privacy protection</string>
    <string name="privacy_mode_enable_title">Enable guarded mode</string>
    <string name="ac_enable_title">Enable access control</string>
    <string name="ac_set_apps_title">Protect applications</string>
    <string name="ac_privacy_mode_title">Protect guarded mode</string>
    <string name="launcher_settings_title">Launcher</string>
    <string name="screen_on_proximity_sensor_title">Prevent misoperation</string>
    <string name="screen_on_proximity_sensor_summary">Prevent misoperation while phone is in pocket (detected by the proximity sensor).</string>
    <string name="key_settings">Buttons &amp; keys</string>
    <string name="menu_key">Menu key</string>
    <string name="enable_assist_key_long_press">Hold key to open voice assist</string>
    <string name="back_long_press">Back key</string>
    <string name="enable_back_long_press">Hold key to close app</string>
    <string name="back_long_press_timeout">Delay time</string>
    <string name="enable_snapshot_screenlock">Hold key to snapshot when screen lock</string>
    <string name="power_key">Power button</string>
    <string name="disable_power_key_long_press_under_keyguard">Disable on lockscreen</string>
    <string name="camera_key_action_title">MI Button</string>
    <string name="camera_key_action_setting_title">MI Button</string>
    <string name="camera_key_action_category_title">Use if camera application is not permitted</string>
    <string name="multi_touch_points_category_title">Multi-touch points</string>
    <string name="multi_touch_points_preference">Reboot to enable</string>
    <string name="trackball_wake_title">Trackball wake</string>
    <string name="trackball_settings">Trackball</string>
    <string name="pref_volume_category_title">Volume</string>
    <string name="pref_volume_wake_title">Volume rocker wake</string>
    <string name="pref_volume_wake_summary">Pressing the volume up/down wakes the device. Intended for devices with a hard to press power key.</string>
    <string name="nearby_wifi">Select nearby WLAN</string>
    <string name="pref_operational_key">Operational key</string>
    <string name="pref_button_light">Button light</string>
    <string name="pref_button_light_summary">Menu, Home and Back key indicator</string>
    <string name="button_light_timeout">Button light settings</string>
    <string name="screen_button_key">Screen virtual keys</string>
    <string name="screen_button_custom">Customize screen key positions</string>
    <string name="volume_category_title">Volume</string>
    <string name="vibrate_category_title">Vibrate</string>
    <string name="vibrate_in_normal_title">Vibrate in normal mode</string>
    <string name="virus_scanner_scanning">Protecting software</string>
    <string name="virus_scanner_scan">Scan Now</string>
    <string name="virus_scanner_kinsoft_provider">Security support provided by Kingsoft Phone Guardian</string>
</resources>