<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/key_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/menu_key">
        <CheckBoxPreference android:title="@string/enable_assist_key_long_press" android:key="enable_assist_menu_long_press" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/back_long_press">
        <CheckBoxPreference android:title="@string/enable_back_long_press" android:key="enable_back_long_press" android:disableDependentsState="false" />
        <ListPreference android:entries="@array/back_long_press_timeout" android:title="@string/back_long_press_timeout" android:key="back_long_press_timeout" android:dependency="enable_back_long_press" android:dialogTitle="@string/back_long_press_timeout" android:entryValues="@array/back_long_press_timeout_value" />
        <CheckBoxPreference android:title="@string/enable_snapshot_screenlock" android:key="enable_snapshot_screenlock" android:disableDependentsState="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/power_key">
        <CheckBoxPreference android:title="@string/disable_power_key_long_press_under_keyguard" android:key="disable_power_long_press" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/trackball_settings" android:key="trackball_category">
        <CheckBoxPreference android:title="@string/trackball_wake_title" android:key="trackball_wake" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/camera_key_action_title" android:key="camera_key_action_category">
        <Preference android:title="@string/camera_key_action_setting_title" android:key="camera_key_action" android:summary="@string/camera_key_action_category_title">
            <intent android:targetPackage="com.android.systemui" android:targetClass="com.android.systemui.settings.CameraKeySettings" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/multi_touch_points_category_title" android:key="multi_touch_points_category">
        <CheckBoxPreference android:title="@string/multi_touch_points_preference" android:key="enable_multi_touch_points" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_volume_category_title" android:key="pref_volume_category">
        <CheckBoxPreference android:title="@string/pref_volume_wake_title" android:key="pref_volume_wake" android:summary="@string/pref_volume_wake_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_operational_key" android:key="pref_button_category">
        <CheckBoxPreference android:title="@string/pref_button_light" android:key="pref_button_light" android:summary="@string/pref_button_light_summary" />
        <ListPreference android:persistent="false" android:entries="@array/button_light_timeout_entries" android:title="@string/button_light_timeout" android:key="button_light_timeout" android:dependency="pref_button_light" android:dialogTitle="@string/button_light_timeout" android:entryValues="@array/button_light_timeout_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/screen_button_key" android:key="screen_button_category">
        <PreferenceScreen android:title="@string/screen_button_custom" android:key="screen_button_custom">
            <intent android:targetPackage="com.android.systemui" android:action="android.intent.action.MAIN" android:targetClass="com.android.systemui.screenkey.ScreenKeySettings" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
