<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/sound_settings" android:key="sound_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/volume_category_title">
        <Preference android:persistent="false" android:title="@string/all_volume_title" android:key="ring_volume">
            <intent android:targetPackage="com.android.settings" android:targetClass="com.android.settings.sound.RingerVolumeActivity" />
        </Preference>
        <CheckBoxPreference android:persistent="false" android:title="@string/silent_mode_title" android:key="miui_silent_or_vibrate" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/vibrate_category_title">
        <CheckBoxPreference android:persistent="false" android:title="@string/vibrate_in_silent_title" android:key="miui_vibrate_in_silent_key" />
        <CheckBoxPreference android:persistent="false" android:title="@string/vibrate_in_normal_title" android:key="miui_vibrate_in_normal_key" />
    </PreferenceCategory>
    <Preference android:title="@string/musicfx_title" android:key="musicfx">
        <intent android:targetPackage="com.android.musicfx" android:targetClass="com.android.musicfx.ControlPanelPicker" />
    </Preference>
    <PreferenceCategory android:title="@string/sound_category_calls_and_notification_title" android:key="category_calls_and_notification" />
    <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="ringtone" android:dialogTitle="@string/ringtone_title" android:ringtoneType="ringtone" />
    <com.android.settings.DefaultRingtonePreference android:persistent="false" android:title="@string/notification_sound_title" android:key="notification_sound" android:dialogTitle="@string/notification_sound_dialog_title" android:ringtoneType="notification" />
    <com.android.settings.SmsRingtonePreference android:title="@string/sms_received_sound_title" android:key="sms_received_sound" android:dialogTitle="@string/sms_received_sound_dialog_title" android:ringtoneType="notification" />
    <com.android.settings.SmsRingtonePreference android:title="@string/sms_delivered_sound_title" android:key="sms_delivered_sound" android:dialogTitle="@string/sms_delivered_sound_dialog_title" android:ringtoneType="notification" />
    <PreferenceCategory android:title="@string/sound_category_feedback_title" />
    <CheckBoxPreference android:title="@string/dtmf_tone_enable_title" android:key="dtmf_tone" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/sound_effects_enable_title" android:key="sound_effects" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/lock_sounds_enable_title" android:key="lock_sounds" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/haptic_feedback_enable_title" android:key="haptic_feedback" android:defaultValue="true" />
    <ListPreference android:entries="@array/haptic_feedback_level_entries" android:title="@string/haptic_feedback_level" android:key="haptic_feedback_level" android:dependency="haptic_feedback" android:entryValues="@array/haptic_feedback_level_values" />
    <ListPreference android:entries="@array/emergency_tone_entries" android:title="@string/emergency_tone_title" android:key="emergency_tone" android:entryValues="@array/emergency_tone_values" />
</PreferenceScreen>
