<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/display_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <Preference android:title="@string/brightness" android:key="brightness">
        <intent android:targetPackage="com.android.settings" android:targetClass="com.android.settings.display.BrightnessActivity" />
    </Preference>
    <PreferenceScreen android:title="@string/wallpaper_settings_title" android:key="wallpaper">
        <intent android:targetPackage="com.android.thememanager" android:targetClass="com.android.thememanager.WallpaperSettings" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/launcher_settings_title" android:key="launcher_settings">
        <intent android:targetPackage="com.miui.home" android:action="android.intent.action.MAIN" android:targetClass="com.miui.home.launcher.LauncherPreferenceActivity" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/title_font_size" android:key="font_size">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.display.FontSizeSettings" />
    </PreferenceScreen>
    <CheckBoxPreference android:title="@string/accelerometer_title" android:key="accelerometer" />
    <ListPreference android:persistent="false" android:entries="@array/screen_timeout_entries" android:title="@string/screen_timeout" android:key="screen_timeout" android:summary="@string/screen_timeout_summary" android:entryValues="@array/screen_timeout_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/notification_pulse_title" android:key="notification_pulse" />
    <CheckBoxPreference android:persistent="false" android:title="@string/screen_on_proximity_sensor_title" android:key="screen_on_proximity_sensor" android:summary="@string/screen_on_proximity_sensor_summary" />
</PreferenceScreen>
