<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wifi_settings_category"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/nearby_wifi" android:key="nearby_wifi" />
    <PreferenceCategory android:title="@string/wifi_settings_category" android:key="wifi_settings">
        <CheckBoxPreference android:persistent="false" android:title="@string/wifi_notify_open_networks" android:key="notify_open_networks" android:summary="@string/wifi_notify_open_networks_summary" />
        <Preference android:persistent="false" android:title="@string/advanced_settings">
            <intent android:targetPackage="com.android.settings" android:targetClass="com.android.settings.Settings$AdvancedWifiSettingsActivity" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
