<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:gravity="center" android:orientation="vertical" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1" android:shrinkColumns="1">
        <TableRow>
            <TextView android:text="@string/model_number" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/model_number" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView android:text="@string/firmware_version" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/firmware_version" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView android:text="@string/device_miui_version" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/device_miui_version" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView android:text="@string/device_cpu" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/device_cpu" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView android:text="@string/device_memory" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/device_memory" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView android:text="@string/device_internal_memory" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/internal_memory_available" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/internal_memory_total" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:id="@id/sdcard_available_row" android:paddingTop="3.0dip">
            <TextView android:text="@string/device_sd_memory" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/sdcard_available" style="@style/Miui.InformationTextStyle" />
        </TableRow>
        <TableRow android:paddingTop="3.0dip">
            <TextView android:id="@id/sdcard_total_title" style="@style/Miui.InformationItemTitleStyle" />
            <TextView android:id="@id/sdcard_total" style="@style/Miui.InformationTextStyle" />
        </TableRow>
    </TableLayout>
</LinearLayout>
