<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingTop="12.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/scan_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/virus_scan_shield" android:scaleType="fitCenter" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@android:color/secondary_text_dark" android:id="@id/scanning_show" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/virus_scanner_scanning" android:layout_below="@id/scan_icon" android:layout_centerHorizontal="true" />
    <Button android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@id/scan_now" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/virus_scanner_scan" android:layout_below="@id/scanning_show" />
    <ListView android:id="@id/scan_item" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/scan_now" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@android:color/secondary_text_dark" android:id="@id/lib_provider" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/virus_scanner_kinsoft_provider" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
</RelativeLayout>
